syntax = "proto3";

package exchanges;

service ExchangeService {
	rpc ListExchanges (ListExchangesRequest) returns (ListExchangesResponse) {}
	rpc AddExchange (AddExchangeRequest) returns (AddExchangeResponse) {}
}

message Exchange {
	int32  id 		   = 1;
	string name 	   = 2;
	string description = 3;
	// double  created_on  = 4;
	string key		   = 5;
}

message ListExchangesRequest {
}

message ListExchangesResponse {
	repeated Exchange exchanges = 1;
}

message AddExchangeRequest {
	string name 	   = 1;
	string description = 2;
}

message AddExchangeResponse {}
